--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 400px;
+            max-width: 500px;
             margin: 0 auto;
             background: white;
             padding: 20px;
@@ -50,8 +50,8 @@
 <body>
     <div class="container">
         <h1>DJ Power Calculator</h1>
-        <input id="difficulty" type="number" step="0.01" placeholder="Enter difficulty coefficient">
-        <input id="score" type="number" step="0.01" placeholder="Enter score">
+        <input id="difficulty" type="number" step="0.01" placeholder="输入难度系数">
+        <input id="score" type="number" step="0.01" placeholder="输入分数">
         <button onclick="calculatePower()">Calculate</button>
         <div class="result" id="result"></div>
     </div>
